Fixed scrollbar bug in firefox

--- a/public/stylesheets/sass/app.sass
+++ b/public/stylesheets/sass/app.sass
@@ -18,12 +18,13 @@ hr
   color: #ccc
 
 #topline-notice
-  background: $highlight-color
-  text-align: center
-  -webkit-box-shadow: #9C9C9C 0 1px 15px
-  -moz-box-shadow: 0 1px 15px #9C9C9C
-  border-bottom: 1px solid #1D4088
+  overflow: hidden
   p.notice, p.alert, p.error
+    background: $highlight-color
+    text-align: center
+    -webkit-box-shadow: #9C9C9C 0 1px 15px
+    -moz-box-shadow: 0 1px 15px #9C9C9C
+    border-bottom: 1px solid #1D4088
     margin: 0
     text-align: center
     font-size: 20px
